# monolithic_renderer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
docs/: plan.md  whiteboard.md
include/: camera.h  geo_render_pass.h  renderer.h
shader_src/: UNUSED_GEOMETRY_MATERIAL_NAMING_INFO.md  UNUSED_edit_geommat_settings.py  colored_triangle.frag.spv  colored_triangle.vert  colored_triangle.vert.spv  geom_camera_set0.glsl  geom_culling.comp  geom_instance_data_br.glsl  geom_material_sets_helper_functions.glsl  geom_material_sets_set1.glsl  geom_materials.json  geom_per_frame_datas_set0.glsl  geom_static_mesh_vert.glsl  geom_vert_helper_functions.glsl  geom_write_draw_cmds.comp  geommat_missing.frag  geommat_missing.vert  geommat_opaque_shadow.frag  geommat_opaque_shadow.vert  geommat_opaque_z_prepass.vert  geommat_static_mesh_vert.glsl  gradient.comp  gradient.comp.spv
src/: camera.cpp  fastgltf_support__cglm_element_traits.h  geo_instance.cpp  geo_instance.h  gltf_loader.cpp  gltf_loader.h  gpu_geo_data.h  imgui_system.cpp  imgui_system.h  material_bank.cpp  material_bank.h  renderer.cpp  renderer.h  renderer_win64_impl.cpp  renderer_win64_impl.h  renderer_win64_vk_buffer.cpp  renderer_win64_vk_buffer.h  renderer_win64_vk_buffer__allocated_buffer.h  renderer_win64_vk_descriptor_layout_builder.cpp  renderer_win64_vk_descriptor_layout_builder.h  renderer_win64_vk_image.cpp  renderer_win64_vk_image.h  renderer_win64_vk_immediate_submit.cpp  renderer_win64_vk_immediate_submit.h  renderer_win64_vk_pipeline.cpp  renderer_win64_vk_pipeline.h  renderer_win64_vk_pipeline_builder.cpp  renderer_win64_vk_pipeline_builder.h  renderer_win64_vk_util.cpp  renderer_win64_vk_util.h  renderer_win64_vulkan_util.cpp  renderer_win64_vulkan_util.h
